unpackaged/main/default/objects/Contract__c/Contract__c.object-meta.xml
<CustomObject>
    <description>Various contracts associated to customers, projects and umbrellas. Use of custom object in place of standard considering future implementation of CPQ with contract and its line items.</description>
    <label>Contract</label>
    <nameField>
        <label>Contract Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>