unpackaged/main/default/objects/Contract__c/fields/Already_Notified__c.field-meta.xml
<CustomField>
    <fullName>Already_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When amendment review, ensuring only first notification is sent</description>
    <label>Already Notified</label>
    <type>Checkbox</type>
</CustomField>