unpackaged/main/default/objects/Contract__c/fields/Amendment_Requiring_Attention__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Requiring_Attention__c</fullName>
    <formula>If(
OR(
$User.Id = Reviewer__r.Id &amp;&amp; Pending_A1_Amendment_Lines_Count__c &gt;0,
$User.Id = Approver__r.Id &amp;&amp; Pending_A2_Amendment_Lines_Count__c &gt;0
),
True,
False
)</formula>
    <label>Amendment Requiring Attention</label>
    <type>Checkbox</type>
</CustomField>