unpackaged/main/default/objects/Contract__c/fields/Amendment_Review__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Review__c</fullName>
    <formula>HYPERLINK( &quot;/lightning/n/Amendment_Review?recordId__c=&quot; &amp; Id, Name )</formula>
    <label>Amendment Review</label>
    <type>Text</type>
</CustomField>