unpackaged/main/default/objects/Contract__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Approver as provided by CPS.</description>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>