unpackaged/main/default/objects/Contract__c/fields/Approver_Action__c.field-meta.xml
<CustomField>
    <fullName>Approver_Action__c</fullName>
    <description>Approver action - Approved / Rejected</description>
    <label>Approver Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>