unpackaged/main/default/objects/Contract__c/fields/Approver_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Approver_Action_Date__c</fullName>
    <description>The date the approver took action on the contract.</description>
    <label>Approver Action Date</label>
    <type>DateTime</type>
</CustomField>