unpackaged/main/default/objects/Contract__c/fields/Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approver_Comments__c</fullName>
    <description>Any comments from the approver.</description>
    <label>Approver Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>