unpackaged/main/default/objects/Contract__c/fields/Commercial_Pricing_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Pricing_Project_Name__c</fullName>
    <label>Commercial Pricing Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>