unpackaged/main/default/objects/Contract__c/fields/Contract_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Contract_Amendment__c</fullName>
    <description>Salesforce only only sttaus field for amended contracts to indicate initiation of downstream processes</description>
    <label>Contract Amendment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Load</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>