unpackaged/main/default/objects/Contract__c/fields/Contract_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Approval_Status__c</fullName>
    <label>Customer Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Load</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Customer Rejected</fullName>
            </value>
            <value>
                <fullName>Customer Approved</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <isActive>false</isActive>
                <label>Active</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Draft</fullName>
                <isActive>false</isActive>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Expired</fullName>
                <isActive>false</isActive>
                <label>Expired</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>Reviewed</fullName>
                <isActive>false</isActive>
                <label>Reviewed</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
                <isActive>false</isActive>
                <label>Submitted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>