unpackaged/main/default/objects/Contract__c/fields/Contract_Header_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_Header_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique identifier on Header</description>
    <externalId>true</externalId>
    <label>Contract Header ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>