unpackaged/main/default/objects/Contract__c/fields/Contract_Locked__c.field-meta.xml
<CustomField>
    <fullName>Contract_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Always populated and updated by CPS - used to lock a contract from being updated during the review process</description>
    <label>Contract Locked</label>
    <type>Checkbox</type>
</CustomField>