unpackaged/main/default/objects/Contract__c/fields/Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Name__c</fullName>
    <description>Name of the contract</description>
    <label>Contract Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>