unpackaged/main/default/objects/Contract__c/fields/Contract_Requiring_Attention__c.field-meta.xml
<CustomField>
    <fullName>Contract_Requiring_Attention__c</fullName>
    <formula>If(
OR(
$User.Id = Reviewer__r.Id &amp;&amp; Ispickval(Contract_Approval_Status__c, &quot;Pending&quot;) &amp;&amp; Ispickval(Status__c, &quot;Pending&quot;),
$User.Id = Reviewer__r.Id &amp;&amp; Ispickval(Contract_Approval_Status__c, &quot;Pending&quot;) &amp;&amp; Ispickval(Status__c, &quot;Approved&quot;),
$User.Id = Approver__r.Id &amp;&amp; Ispickval(Status__c, &quot;Reviewed&quot;)
),
True,
False
)</formula>
    <label>Contract Requiring Attention</label>
    <type>Checkbox</type>
</CustomField>