unpackaged/main/default/objects/Contract__c/fields/Contract_Review__c.field-meta.xml
<CustomField>
    <fullName>Contract_Review__c</fullName>
    <formula>HYPERLINK( &quot;/lightning/n/Contract_Review?recordId__c=&quot; &amp; Id, Name )</formula>
    <label>Contract Review</label>
    <type>Text</type>
</CustomField>