unpackaged/main/default/objects/Contract__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Date when the contract ended.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>