unpackaged/main/default/objects/Contract__c/fields/New_Approver__c.field-meta.xml
<CustomField>
    <fullName>New_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts3</relationshipName>
    <type>Lookup</type>
</CustomField>