unpackaged/main/default/objects/Contract__c/fields/New_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>New_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>