unpackaged/main/default/objects/Contract__c/fields/Original_Approver__c.field-meta.xml
<CustomField>
    <fullName>Original_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Original approver of the contract. This will help determine who to return the review to after delegation is completed.</description>
    <label>Original Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OriginalApprover</relationshipName>
    <type>Lookup</type>
</CustomField>