unpackaged/main/default/objects/Contract__c/fields/Original_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Original_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Original reviwer of the contract. This will help determine who to return the review to after delegation is completed.</description>
    <label>Original Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OriginalReviewer</relationshipName>
    <type>Lookup</type>
</CustomField>