unpackaged/main/default/objects/Contract__c/fields/Pending_A1_Amendment_Lines_Count__c.field-meta.xml
<CustomField>
    <fullName>Pending_A1_Amendment_Lines_Count__c</fullName>
    <description>Number of amendment lines</description>
    <label>Pending A1 Amendment Lines Count</label>
    <summaryFilterItems>
        <field>Contract_Line_Item__c.Line_Type__c</field>
        <operation>equals</operation>
        <value>Amendment</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Contract_Line_Item__c.Line_Status__c</field>
        <operation>equals</operation>
        <value>A1</value>
    </summaryFilterItems>
    <summaryForeignKey>Contract_Line_Item__c.Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>