unpackaged/main/default/objects/Contract__c/fields/Previous_Approver_Record__c.field-meta.xml
<CustomField>
    <fullName>Previous_Approver_Record__c</fullName>
    <description>Store Approvers comments, action date, action and name.</description>
    <label>Previous Approver Record</label>
    <type>TextArea</type>
</CustomField>