unpackaged/main/default/objects/Contract__c/fields/Previous_Header_ID__c.field-meta.xml
<CustomField>
    <fullName>Previous_Header_ID__c</fullName>
    <description>Populated when a contract comes in for renewal.</description>
    <label>Previous Header ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>