unpackaged/main/default/objects/Contract__c/fields/Previous_Reviewer_Record__c.field-meta.xml
<CustomField>
    <fullName>Previous_Reviewer_Record__c</fullName>
    <description>Store Reviewer comments, action date, action and name.</description>
    <label>Previous Reviewer Record</label>
    <length>200</length>
    <type>Text</type>
</CustomField>