unpackaged/main/default/objects/Contract__c/fields/Price_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Price_Estimate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price Estimate</label>
    <type>Checkbox</type>
</CustomField>