unpackaged/main/default/objects/Contract__c/fields/Project_Address__c.field-meta.xml
<CustomField>
    <fullName>Project_Address__c</fullName>
    <description>Adress Line 1 &amp; 2 (Street address)</description>
    <label>Project Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>