unpackaged/main/default/objects/Contract__c/fields/Project_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Project_Postcode__c</fullName>
    <label>Project Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>