unpackaged/main/default/objects/Contract__c/fields/Project_State__c.field-meta.xml
<CustomField>
    <fullName>Project_State__c</fullName>
    <label>Project State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>