unpackaged/main/default/objects/Contract__c/fields/Requires_Attention__c.field-meta.xml
<CustomField>
    <fullName>Requires_Attention__c</fullName>
    <description>this field is a flag used for reporting. Returns True if the current user is either the Reviewer or the Approver and the contract sits with them</description>
    <formula>If(
OR(
$User.Id = Reviewer__r.Id &amp;&amp; Ispickval(Contract_Approval_Status__c, &quot;Pending&quot;) &amp;&amp; Ispickval(Status__c, &quot;Pending&quot;),
$User.Id = Reviewer__r.Id &amp;&amp; Ispickval(Contract_Approval_Status__c, &quot;Pending&quot;) &amp;&amp; Ispickval(Status__c, &quot;Approved&quot;),
$User.Id = Approver__r.Id &amp;&amp; Ispickval(Status__c, &quot;Reviewed&quot;),
$User.Id = Reviewer__r.Id &amp;&amp; Pending_A1_Amendment_Lines_Count__c &gt;0,
$User.Id = Approver__r.Id &amp;&amp; Pending_A2_Amendment_Lines_Count__c &gt;0
),
True,
False
)</formula>
    <label>Requires Attention</label>
    <type>Checkbox</type>
</CustomField>