unpackaged/main/default/objects/Contract__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reviewer as provided by CPS - First level approver</description>
    <label>Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>