unpackaged/main/default/objects/Contract__c/fields/Reviewer_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Action_Date__c</fullName>
    <description>The date that the Approver took action on the Contract.</description>
    <label>Reviewer Action Date</label>
    <type>DateTime</type>
</CustomField>