unpackaged/main/default/objects/Contract__c/fields/Reviewer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Comments__c</fullName>
    <description>Any comments from the Approver.</description>
    <label>Reviewer Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>