unpackaged/main/default/objects/Contract__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date when the contract started</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>