unpackaged/main/default/objects/Contract__c/fields/Type_of_Review__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Review__c</fullName>
    <label>Type of Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract Review</fullName>
            </value>
            <value>
                <fullName>Renewal Contract Review</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>