unpackaged/main/default/objects/Contract__c/fields/Viewer_is_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Viewer_is_Reviewer__c</fullName>
    <description>This field is a flag used for reporting. Returns True if the current user is the Reviewer</description>
    <formula>$User.Id = Reviewer__r.Id ||
$User.Id =  Original_Reviewer__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Viewer is Reviewer</label>
    <type>Checkbox</type>
</CustomField>