unpackaged/main/default/objects/Contract__c/recordTypes/AU_Contract.recordType-meta.xml
<RecordType>
    <fullName>AU_Contract</fullName>
    <active>true</active>
    <label>AU Contract</label>
</RecordType>