unpackaged/main/default/objects/Contract__c/recordTypes/NZ_Contract.recordType-meta.xml
<RecordType>
    <fullName>NZ_Contract</fullName>
    <active>true</active>
    <label>NZ Contract</label>
</RecordType>