unpackaged/main/default/objects/Contract__c/listViews/Admin.listView-meta.xml
<ListView>
    <fullName>Admin</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Header_ID__c</field>
        <operation>equals</operation>
        <value>160592</value>
    </filters>
    <label>Admin</label>
    <sharedTo>
        <group>System_Administrator</group>
    </sharedTo>
</ListView>